# PipedMigrate

./: .gitignore  README.MD  pyproject.toml
piped_migrate/: __init__.py  __main__.py
