[project]
name = "piped_migrate"
version = "0.0.3"
authors = [
  { name="Daniel", email="rozario@disroot.org" },
]
description = "Simple script for migrate piped playlists. "
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["requests"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU 3 License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TheCrowClub/PipedMigrate"
"Bug Tracker" = "https://github.com/TheCrowClub/PipedMigrate/issues"

[project.scripts]
pipedmigrate = 'piped_migrate.__main__:main'

